Watermark was added to the images with RabbitMQ.

--- a/RabbitMQWeb.Watermark/appsettings.json
+++ b/RabbitMQWeb.Watermark/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RabbitMQ": "amqps://fifcfken:9gUJbw-2pG6oXhAY9TKqbIBzDtRc8VUW@woodpecker.rmq.cloudamqp.com/fifcfken"
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
