--- a/RabbitMQWeb.Watermark/appsettings.json
+++ b/RabbitMQWeb.Watermark/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RabbitMQ": "amqps://fifcfken:9gUJbw-2pG6oXhAY9TKqbIBzDtRc8VUW@woodpecker.rmq.cloudamqp.com/fifcfken"
+    "RabbitMQ": "xx"
   },  
   "Logging": {
     "LogLevel": {
